cmake_minimum_required(VERSION 3.15)
project(ooop_ex_s2_2020)

set(CMAKE_CXX_STANDARD 17)

add_executable(ooop_ex_s2_2020 main.cpp src/Container.inl.h src/Container.h src/container-realization/ContainerRealization.inl.h src/container-realization/ContainerRealization.h src/structures/list/List.inl.h src/structures/list/List.h src/structures/list/Iterator.inl.h src/structures/list/Iterator.h src/container-realization/ListRealizationinl.h src/container-realization/ListRealization.h)